# dirt

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
ext/: CMakeLists.txt
ext/filesystem/filesystem/: path.h
include/PolynomialOptics/: Cylindrical5.hh  OpticalMaterial.hh  Propagation5.hh  Spherical5.hh  TruncPolySystem.hh  TwoPlane5.hh
include/dirt/: background.h  camera.h  common.h  fwd.h  material.h  medium.h  mesh.h  parser.h  path_tracer_mats.h  path_tracer_mis.h  path_tracer_mixture.h  path_tracer_nee.h  path_tracer_simple.h  quad.h  ray.h  sampler.h  sampling.h  scene.h  sphere.h  surface.h  surfacegroup.h  transform.h  volpath_tracer_nee.h  volpath_tracer_uni.h
report/pa0/: report.html
report/pa1/: report.html
report/pa1/images/: 01_plane-ref.hdr  02_balls-ref.hdr  03_refl-ref.hdr  04_refr-ref.hdr  05_quad-light-ref.hdr  06_cornell-box-ref.hdr
report/pa2/: report.html
report/pa3/: report.html
report/pa4/: report.html
scenes/final/: layered-cornell-box.json  lens-cornell-box.json
src/: 01_dirt.cpp  01_dirt_tutorial.cpp  02_test_tri_intersection.cpp  03_sample_test.cpp  04_sample_tester.cpp  OpticalMaterial.cpp  background.cpp  material.cpp  medium.cpp  mesh.cpp  parser.cpp  quad.cpp  sampler.cpp  scene.cpp  sphere.cpp  surfacegroup.cpp
